adjust image dimension and title in template

--- a/server/src/templates/email/newFeedback.hbs
+++ b/server/src/templates/email/newFeedback.hbs
@@ -34,8 +34,9 @@
     }
 
     .screenshot img {
-      width: 500px;
-      height: 500px;
+      max-width: 900px;
+      max-height: 900px;
+      background-size: cover;
     }
 
     @media (max-width: 700px) {
@@ -50,7 +51,7 @@
   <div class="content">
     <div class="title">
       <br />
-      <span>nlw - Feedback widget</span>
+      <span>nlw 8 Return - Feedback widget</span>
     </div>
     <div class="label">
       <span>Tipo do feedback: {{type}}</span>
